[package]
name = "ul"
authors = ["Kenan Sulayman <kenan@sly.mn>"]
edition = "2018"
description = "High Level Bindings to Ultralight SDK"
version = "1.0.0-pre2"

repository = "https://github.com/psychonautwiki/rust-ul"
documentation = "https://docs.rs/ul/latest/ul/"

[dependencies]
ul-sys = "1.0.0"

[target.'cfg(feature = "image")'.dependencies]
image = "0.21.0"

[profile]

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = true

[profile.release]
debug = false
debug-assertions = false
opt-level = 3
panic = "abort"
rpath = true
